# fitness_app_backend

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.debug.yaml  docker-compose.dev.yaml  docker-compose.yaml  pgadmin_servers.json  pyproject.toml
db/: dataset_to_db.py  exercise_workouts.sql  exercises.sql  file_entities.sql  main_images.json  workouts.sql
fitness_app/: main.py
fitness_app/auth/: dependencies.py  permissions.py  routers.py  schemas.py  services.py
fitness_app/chats/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/coaches/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/core/: db_manager.py  dependencies.py  exceptions.py  schemas.py  settings.py  setup.py  utils.py
fitness_app/customers/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/diaries/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/exercises/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/feedbacks/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/file_entities/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/messages/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/steps/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/store/: models.py  repositories.py  routers.py  schemas.py  services.py
fitness_app/users/: models.py  repositories.py  routers.py  schemas.py  services.py
(+11 files in other folders)
